--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "signup-inputbox-tokenisation": "^1.0.0",
+    "signup-validatebutton-tokenisation": "^1.0.0",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
