--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @bhaskarj123:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
